Stats are now visible, but need to fix css

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,5 +3,5 @@
 @tailwind utilities;
 
 body {
-    @apply bg-indigo-950 text-neutral-100
+    @apply bg-zinc-900 text-neutral-100
 }
